﻿A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Note that, baring some major issue building and cutting the release, build
228 will be the last version supporting Python 2.


Since build 228:
----------------

Python 2 is no longer supported - so long, Python 2, you served us well!

Notable changes in this transition:

* Python 3 builds used to erroneously turn "bytes" into a tuple of integers
  instead of a buffer type object. Because this special-casing is important for
  performance when using massive buffers, this has been fixed in Python 3 so
  it matches the old Python 2 behavior. If you use arrays of VT_UI1 and expect
  get back tuples of integers, your code may break.

Since build 227:
----------------
* Support for for win32evtlog.EvtFormatMessage and EvtCreateRenderContext
 (#1308)

* Support more elements in the SECURITY_LOGON_SESSION_DATA struct
  returned by win32security.LsaGetLogonSession (#1515)

* Remove trailing \0 char from win32file.FindFileNames results (#1511)

* Added win32process.ReadProcessMemory/WriteProcessMemory (#1502)

* Added win32process.VirtualAllocEx/VirtualFreeEx (#1509)

* Added win32gui.ValidateRect (#1504)

* Adodbapi corrected and updated to version 2.6.2. With this change the pywin32
  repo will become the definitive source code for adodbapi, so files should never
  be missing again. Includes bug fix for 'named' paramstyle SF#28.
* Added a __repr__ implementation for PySecBufferDesc and PySecBuffer.

* Fix bug when trying to free a PySecBuffer object when the buffer was not
  allocated by the caller. This can occur when decrypting a message with a
  SECBUFFER_STREAM and SECBUFFER_DATA buffer when calling DecryptMessage().

Since build 226:
----------------
* Improved the search for pywin32 system DLLs logic. Useful when installed